--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -340,8 +340,7 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
-    "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader\n",
-    "from tiledb.ml.readers import ArrayParams\n",
+    "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader, ArrayParams\n",
     "\n",
     "class Net(nn.Module):\n",
     "    def __init__(self, shape):\n",
